# glmm_feature_encoders

./: .README.md.swp  Makefile  README.md  setup.cfg  setup.py
data/: toy_classification_data.csv  toy_regression_data.csv
glmm_encoder/: __init__.py
glmm_encoder/datasets/: __init__.py  datasets.py
glmm_encoder/encoders/: __init__.py  encoders.py
glmm_encoder/examples/: __init__.py  avocado_sales_dataset_example.py  bin_classification_example.py  compare_encoders.py  dataset_utils.py  example_helpers.py  model_utils.py  regression_example.py  road_safety_dataset_example.py  toy_bin_classification_example.py  toy_multi_classification_example.py  video_game_sales_example.py
glmm_encoder/examples/binary_classification/: churn_example.py  toy_bin_classification_example.py
glmm_encoder/examples/multiclass_classification/: toy_multi_classification_example.py  video_game_sales_example.py
glmm_encoder/examples/r_scripts/: binary_classif_lmer.R  regression_lmer.R
glmm_encoder/examples/regression/: avocado_sales_example.py  toy_regression_example.py
glmm_encoder/viz/: __init__.py  viz.py
scripts/: binary_classif_lmer.R  regression_lmer.R
