[metadata]
author = 'Akshaan Kakar'
description = 'GLMM encoder for high-cardinality categorical features'
home_page = 'https://github.com/akshaan/glmm_feature_encoders'
name = glmm_feature_encoders
version = 0.1.0

[mypy]
check_untyped_defs = True
ignore_missing_imports = True
disallow_incomplete_defs = True
disallow_untyped_defs = True

[mypy-glmm_encoder.examples.*]
disallow_untyped_defs = False

[pylint]
disable = C0330, R0801, W0104
good-names = f, i, j, k, x, y
ignore-comments = yes
max-attributes=18
max-args = 16
max-locals = 20
max-line-length = 120
notes = FIXME,XXX,TODO
ignore = glmm_encoder.examples

[tool:pytest]
docstyle_convention = google